--- a/index.html
+++ b/index.html
@@ -6,20 +6,21 @@
     <title>Snake Game</title>
     <style>
         body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
             margin: 0;
-            background-color: #000;
+            padding: 0;
+            overflow: hidden;
+            touch-action: none; /* Предотвращает прокрутку и масштабирование */
         }
+
         canvas {
-            border: 1px solid #fff;
+            display: block;
+            background-color: #000;
+            margin: 0 auto;
         }
     </style>
 </head>
 <body>
-    <canvas id="gameCanvas" width="400" height="400"></canvas>
-    <script src="snake.js"></script>
+    <canvas id="gameCanvas"></canvas>
+    <script src="game.js"></script>
 </body>
 </html>
