--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
             padding: 0;
             overflow: hidden;
             touch-action: none; /* Предотвращает прокрутку и масштабирование */
+            background-color: #000; /* Черный фон для всего окна */
         }
 
         canvas {
             display: block;
             background-color: #000;
             margin: 0 auto;
+            position: absolute;
+            top: 0;
+            left: 0;
         }
 
         #restartButton {
