--- a/index.html
+++ b/index.html
@@ -53,6 +53,6 @@
     <canvas id="gameCanvas"></canvas>
     <button id="restartButton">Restart</button>
     <div id="gameOverText">Game Over</div>
-    <script src="game.js"></script>
+    <script src="snake.js"></script>
 </body>
 </html>
