--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
         canvas {
             display: block;
             background-color: #000;
-            position: absolute;
-            top: 0;
-            left: 0;
+            margin: 0 auto;
         }
 
         #restartButton {
