--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
             padding: 0;
             overflow: hidden;
             touch-action: none; /* Предотвращает прокрутку и масштабирование */
+            background-color: #000; /* Черный фон для всего документа */
         }
 
         canvas {
             display: block;
             background-color: #000;
-            margin: 0 auto;
+            position: absolute;
+            top: 0;
+            left: 0;
         }
 
         #restartButton {
@@ -45,12 +48,30 @@
             font-size: 24px;
             display: none; /* Скрыто по умолчанию */
         }
+
+        #score {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            color: white;
+            font-size: 18px;
+        }
+
+        .apple-indicator {
+            display: inline-block;
+            width: 20px;
+            height: 20px;
+            background-color: red;
+            border: 1px solid #fff;
+            vertical-align: middle;
+        }
     </style>
 </head>
 <body>
     <canvas id="gameCanvas"></canvas>
     <button id="restartButton">Restart</button>
     <div id="gameOverText">Game Over</div>
-    <script src="snake.js"></script>
+    <div id="score"><span class="apple-indicator"></span> Score: <span id="scoreValue">0</span></div>
+    <script src="game.js"></script>
 </body>
 </html>
