--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             background-color: red;
             border: 1px solid #fff;
             vertical-align: middle;
+            margin-right: 5px;
         }
     </style>
 </head>
