--- a/index.html
+++ b/index.html
@@ -73,6 +73,6 @@
     <button id="restartButton">Restart</button>
     <div id="gameOverText">Game Over</div>
     <div id="score"><span class="apple-indicator"></span> Score: <span id="scoreValue">0</span></div>
-    <script src="game.js"></script>
+    <script src="snake.js"></script>
 </body>
 </html>
